--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_bloc: ^8.1.6
+  google_fonts: ^6.2.1
+  meta: ^1.15.0
+  flutter_colorpicker: ^1.1.0
+
 
 dev_dependencies:
   flutter_test:
