--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   google_fonts: ^6.2.1
   meta: ^1.15.0
   flutter_colorpicker: ^1.1.0
+  firebase_core: ^3.9.0
+  cloud_firestore: ^5.6.0
 
 
 dev_dependencies:
