--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_colorpicker: ^1.1.0
   firebase_core: ^3.9.0
   cloud_firestore: ^5.6.0
+  fluttertoast: ^8.2.10
 
 
 dev_dependencies:
